new api: middle-end completly independend from front-end but still work to do (crash at the moment)

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -8,14 +8,26 @@ ELSE (BUILD_RELEASE)
     ADD_DEFINITIONS(-ggdb -Wall -DSWIFT_DEBUG)
 ENDIF (BUILD_RELEASE)
 
-# call bison
-ADD_CUSTOM_COMMAND(
-    OUTPUT  fe/parser.tab.cpp fe/parser.tab.hpp
-    COMMAND bison -t -d -v -o fe/parser.tab.cpp fe/parser.y
-    DEPENDS fe/parser.y
-)
+# add . as include path
+ADD_DEFINITIONS(-I.)
 
-#call flex
+
+# call bison
+IF (BUILD_RELEASE)
+    ADD_CUSTOM_COMMAND(
+        OUTPUT  fe/parser.tab.cpp fe/parser.tab.hpp
+        COMMAND bison -d -o fe/parser.tab.cpp fe/parser.y
+        DEPENDS fe/parser.y
+    )
+ELSE (BUILD_RELEASE)
+    ADD_CUSTOM_COMMAND(
+        OUTPUT  fe/parser.tab.cpp fe/parser.tab.hpp fe/parser.output
+        COMMAND bison -t -d -v -o fe/parser.tab.cpp fe/parser.y
+        DEPENDS fe/parser.y
+    )
+ENDIF (BUILD_RELEASE)
+
+# call flex
 ADD_CUSTOM_COMMAND(
     OUTPUT  fe/lex.yy.cpp
     COMMAND flex -o fe/lex.yy.cpp fe/lexer.l
