added memory tracer

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -37,6 +37,7 @@ ADD_CUSTOM_COMMAND (
 
 ADD_EXECUTABLE (swift
     utils/assert.cpp
+    utils/memmgr.cpp
 
     fe/lex.yy.cpp
     fe/parser.tab.cpp
