fixed tons of memory leaks

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -46,6 +46,7 @@ ADD_EXECUTABLE (swift
     fe/class.cpp
     fe/error.cpp
     fe/expr.cpp
+    fe/module.cpp
     fe/statement.cpp
     fe/symtab.cpp
     fe/syntaxtree.cpp
