- refactored scopetab.* -> functab.* - fixed memory problem. still work todo

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -55,8 +55,8 @@ ADD_EXECUTABLE (swift
     fe/cmdlineparser.cpp
     fe/main.cpp
 
+    me/functab.cpp
     me/pseudoreg.cpp
-    me/scopetab.cpp
     me/ssa.cpp
 
 )
