- better SSA-classes - added bool.swift builtin type

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -3,7 +3,7 @@ PROJECT (SWIFT)
 OPTION (BUILD_RELEASE "Should I build the release (on) or debug version (off)?" off)
 
 IF (BUILD_RELEASE)
-    ADD_DEFINITIONS (-DNDEBUG -O3 -fomit-frame-pointer)
+    ADD_DEFINITIONS (-DNDEBUG -O3 -fomit-frame-pointer -pipe)
 ELSE (BUILD_RELEASE)
     ADD_DEFINITIONS (-ggdb -Wall -DSWIFT_DEBUG)
 ENDIF (BUILD_RELEASE)
@@ -34,7 +34,21 @@ ADD_CUSTOM_COMMAND (
     DEPENDS fe/lexer.l
 )
 
+# autogenerate builtin types
+# ADD_CUSTOM_COMMAND (
+# #     TARGET swift
+#     PRE_BUILD
+#     COMMAND ./gentypes.sh
+#     WORKING_DIRECTORY fe/builtin
+#     COMMENT autogenerating builtin types
+#     OUTPUT
+#          fe/builtin/int8.swift  fe/builtin/int16.swift  fe/builtin/int32.swift  fe/builtin/int64.swift  fe/builtin/sat8.swift  fe/builtin/sat16.swift
+#         fe/builtin/uint8.swift fe/builtin/uint16.swift fe/builtin/uint32.swift fe/builtin/uint64.swift fe/builtin/usat8.swift fe/builtin/usat16.swift
+#         fe/builtin/real32.swift fe/builtin/real64.swift fe/builtin/index.swift
+#     DEPENDS fe/builtin/int.swift fe/builtin/real.swift fe/builtin/gentypes.sh
+# )
 
+# sources
 ADD_EXECUTABLE (swift
     utils/assert.cpp
     utils/memmgr.cpp
