- removed back-end dependencies from me/functab.cpp - added optimizer frameword - started coloring algorithm for register allocation

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -73,6 +73,7 @@ ADD_EXECUTABLE (swift
     me/basicblock.cpp
     me/cfg.cpp
     me/functab.cpp
+    me/optimizer.cpp
     me/pseudoreg.cpp
     me/ssa.cpp
 
