work for dynamic loading of builtin data tyes

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -61,6 +61,7 @@ ADD_EXECUTABLE (swift
     fe/class.cpp
     fe/error.cpp
     fe/expr.cpp
+    fe/method.cpp
     fe/module.cpp
     fe/statement.cpp
     fe/symtab.cpp
