- moved amd64 to x86_64 - better ssa instruction classes - started support for multiple out args - fixed problems with BranchInstr (still some issues unresolved)

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -67,7 +67,7 @@ ADD_EXECUTABLE (swift
     me/ssa.cpp
 
     be/codegenerator.cpp
-    be/amd64/spiller.cpp
+    be/x86_64/spiller.cpp
 )
 
 # autogenerate builtin types
