added rules for most int instruction, int_cmp and many real instructions

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -98,6 +98,7 @@ ADD_EXECUTABLE (swift
 
     be/x64.cpp
     be/x64codegen.cpp
+    be/x64codegenhelpers.cpp
     be/x64regalloc.cpp
     be/x64parser.tab.cpp
     be/x64parser.tab.hpp
