started simdprefix implementation

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -97,6 +97,7 @@ ADD_EXECUTABLE (swift
     fe/memberfunction.cpp
     fe/module.cpp
     fe/scope.cpp
+    fe/simdprefix.cpp
     fe/signature.cpp
     fe/statement.cpp
     fe/symtab.cpp
