- started coalescing optimization - implemented dominance checks - implemented interference check - implemented enumerating of interfering neighbors

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -112,6 +112,7 @@ ADD_EXECUTABLE (swift
 
     me/arch.cpp
     me/basicblock.cpp
+    me/coalescing.cpp
     me/codepass.cpp
     me/cfg.cpp
     me/coloring.cpp
