- implemented disjoint set data structure / algorithm - implemented coalescing optimization - spiller bug fix - minor other bug fixes

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -79,6 +79,7 @@ ENDIF (BUILD_RELEASE)
 # sources
 ADD_EXECUTABLE (swift
     utils/assert.cpp
+    utils/disjointsets.cpp
     utils/memmgr.cpp
     utils/stringhelper.cpp
 
