- implented instruction coalescing - removed false positives in intNeighbors

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -122,6 +122,7 @@ ADD_EXECUTABLE (swift
     me/defuse.cpp
     me/defusecalc.cpp
     me/functab.cpp
+    me/instrcoalescing.cpp
     me/livenessanalysis.cpp
     me/liverangesplitting.cpp
     me/op.cpp
