--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -125,6 +125,7 @@ ADD_EXECUTABLE (swift
     me/instrcoalescing.cpp
     me/livenessanalysis.cpp
     me/liverangesplitting.cpp
+    me/loopsfinder.cpp
     me/op.cpp
     me/offset.cpp
     me/phiimpl.cpp
