--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -36,13 +36,13 @@ INCLUDE_DIRECTORIES(.)
 IF (BUILD_RELEASE)
     ADD_CUSTOM_COMMAND (
         OUTPUT  fe/parser.cpp fe/parser.inner.h fe/location.hh fe/position.hh fe/stack.hh
-        COMMAND bison --language=C++ --locations -p swift_ --defines=fe/parser.inner.h -o fe/parser.cpp fe/parser.y
+        COMMAND bison -Wall --language=C++ --locations -p swift_ --defines=fe/parser.inner.h -o fe/parser.cpp fe/parser.y
         DEPENDS fe/parser.y
     )
 ELSE (BUILD_RELEASE)
     ADD_CUSTOM_COMMAND (
         OUTPUT  fe/parser.cpp fe/parser.inner.h fe/parser.output fe/location.hh fe/position.hh fe/stack.hh
-        COMMAND bison --language=C++ --locations -p swift_ --defines=fe/parser.inner.h -t -v -o fe/parser.cpp fe/parser.y && ./repair_position.sh
+        COMMAND bison -Wall --language=C++ --locations -p swift_ --defines=fe/parser.inner.h -t -v -o fe/parser.cpp fe/parser.y && ./repair_position.sh
         DEPENDS fe/parser.y
     )
 ENDIF (BUILD_RELEASE)
@@ -51,7 +51,6 @@ ENDIF (BUILD_RELEASE)
 ADD_CUSTOM_COMMAND (
     OUTPUT  fe/lexer.cpp
     COMMAND flex -P swift_ -o fe/lexer.cpp fe/lexer.l 
-
     DEPENDS fe/lexer.l
 )
 
