- reworked tuple/exprlist stuff - more call support - mrv

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -91,6 +91,7 @@ ADD_EXECUTABLE (swift
     fe/classcodegen.cpp
     fe/context.cpp
     fe/error.cpp
+    fe/tnlist.cpp
     fe/llvmtypebuilder.cpp
     fe/node.cpp
     fe/scope.cpp
