more work on vector insertion

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -24,7 +24,7 @@ OPTION (BUILD_RELEASE "Should I build the release (on) or debug version (off)?" 
 IF (BUILD_RELEASE)
     ADD_DEFINITIONS (-DNDEBUG -O3 -fomit-frame-pointer -pipe `llvm-config --cxxflags`)
 ELSE (BUILD_RELEASE)
-    ADD_DEFINITIONS (-g3 -Wall -DSWIFT_DEBUG `llvm-config --cxxflags`)
+    ADD_DEFINITIONS (-ggdb -Wall -DSWIFT_DEBUG -DDEBUG -D_GNU_SOURCE -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS -Woverloaded-virtual) 
 ENDIF (BUILD_RELEASE)
 
 # add . as include path
