prepared to change getScalar/getAddr system

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -83,6 +83,7 @@ ADD_EXECUTABLE (swift
     utils/memmgr.cpp
     utils/stringhelper.cpp
     utils/llvmhelper.cpp
+    utils/llvmplace.cpp
 
     fe/lexer.cpp
     fe/parser.cpp
