--- a/trunk/config.template
+++ b/trunk/config.template
@@ -1,8 +1,29 @@
+#
+# build config
+#
+
+build := debug
+
+CXXFLAGS := -pipe
+
+ifeq (BUILD, debug)
+	CXXFLAGS += -ggdb -Wall
+endif
+ifeq (BUILD, release)
+	CXXFLAGS += -O3 -fomit-frame-pointer -pipe
+endif
+
+#
 # packetizer
+#
+
 CXXFLAGS += -I../packetizer/build/include
 LDFLAGS  += -L../packetizer/build/lib -lPacketizer
 
+#
 # llvm stuff
+#
+
 CXXFLAGS += `llvm-config --cxxflags` 
 LDFLAGS  += `llvm-config --libs core support bitwriter ipo scalaropts jit linker instrumentation x86`
 LDFLAGS  += `llvm-config --ldflags`
