--- a/trunk/config.template
+++ b/trunk/config.template
@@ -10,15 +10,15 @@ ifeq (BUILD, debug)
 	CXXFLAGS += -ggdb -Wall
 endif
 ifeq (BUILD, release)
-	CXXFLAGS += -O3 -fomit-frame-pointer -pipe
+	CXXFLAGS += -O2 -fomit-frame-pointer -pipe
 endif
 
 #
 # packetizer
 #
 
-CXXFLAGS += -I../packetizer/build/include
-LDFLAGS  += -L../packetizer/build/lib -lPacketizer
+#CXXFLAGS += -I../packetizer/build/include
+#LDFLAGS  += -L../packetizer/build/lib -lPacketizer
 
 #
 # llvm stuff
